[fix] nonsense in epfl-elements' CSS breadcrumb
- Torpedo invisible white square on the right-hand side
- Somehow, the 1px bottom border was over everything else; fix that too

--- a/client/main.css
+++ b/client/main.css
@@ -2,3 +2,11 @@ body {
   padding: 10px;
   font-family: sans-serif;
 }
+
+/* TODO: maybe epfl-elements shouldn't do any of this jazz. */
+body .breadcrumb-container, body .breadcrumb-item {
+  position: inherit;
+}
+body .breadcrumb-container::before {
+  display: none;
+}
